@@ -29,6 +29,7 @@ import javax.net.ssl.X509TrustManager;
 import java.io.*;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.security.KeyStore;
 import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
@@ -350,11 +351,11 @@ public class KeystoreManager {
         }
 
         String dns = props.getProperty("authorizedDNs");
-        List<String> authorizedDNs = new ArrayList<String>();
+        List<String> authorizedDNs = new ArrayList<>();
         if (dns != null && dns.length() > 0) {
             String[] dn = dns.split("&");
             for (String s : dn) {
-                String decoded = URLDecoder.decode(s, "UTF-8");
+                String decoded = URLDecoder.decode(s, StandardCharsets.UTF_8);
                 if (decoded.length() > 0) {
                     authorizedDNs.add(decoded);
                 }
@@ -410,7 +411,7 @@ public class KeystoreManager {
         if (authorizedDNs.size() > 0) {
             StringBuilder sb = new StringBuilder();
             for (String dn : authorizedDNs) {
-                sb.append(URLEncoder.encode(dn, "UTF-8")).append("&");
+                sb.append(URLEncoder.encode(dn, StandardCharsets.UTF_8)).append("&");
             }
             props.setProperty("authorizedDNs", sb.toString());
         }
@@ -420,6 +421,4 @@ public class KeystoreManager {
         props.store(out, "Details for " + details.getAlias() + " keystore access.");
         out.close();
     }
-
-
 }
